# amhello

./: Makefile  Makefile.am  README.md  configure.ac
src/: Kbuild  Makefile.am  hello.c  kohello.c  libhello.c
src/lib/: Makefile.am
